iac/kubernetes/net/apm/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: pursit-apm-gateway
  namespace: elastic
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "apm.pursit.ru"
      tls:
        mode: SIMPLE
        credentialName: pursit-apm-tls-certificate
